rest-xml-parser: Ignore text content at the top-level of a document

This prevents a crash due to cur_node being NULL.

Found by scan-build.

https://bugzilla.gnome.org/show_bug.cgi?id=719550